--- a/DL/Model.ipynb
+++ b/DL/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "cfa141a4-a900-4d62-b14e-dc21511dffe8",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,11 @@
     "import keras_cv\n",
     "import matplotlib.pyplot as plt\n",
     "import keras_cv.visualization as visualization\n",
-    "import cv2"
+    "import cv2\n",
+    "import keras\n",
+    "from keras_cv import models, losses, callbacks\n",
+    "import keras_cv.losses as losses\n",
+    "from keras_cv.models import YOLOV8Detector"
    ]
   },
   {
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a5dffbdd-4c1f-44b6-83f6-0814bdad0af3",
    "metadata": {},
    "outputs": [],
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2d728cb6-0d48-4513-aeeb-f5ab25b53bb2",
    "metadata": {},
    "outputs": [],
@@ -230,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "579c499c-da86-4bfe-a6b9-e1dfd4b3d8a6",
    "metadata": {},
    "outputs": [],
@@ -245,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b7b72f97-5958-4bac-9887-a37bd090f3ad",
    "metadata": {},
    "outputs": [],
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "84af5ea1-f503-408c-8ee4-b89a7be5af3f",
    "metadata": {},
    "outputs": [],
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ec0a006c-f8e3-46e0-8060-81f67b7b0988",
    "metadata": {},
    "outputs": [
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6f7dc7ef-82e3-4a7b-9928-9bf57e9ed6e0",
    "metadata": {},
    "outputs": [
@@ -357,9 +361,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b0be0e4-f1d0-4f7e-b3cc-be88d50c37b0",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "82dbd35c-cf9a-4247-bffb-559b93353f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specific optimizer and loss for YOLOv8\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=0.005, momentum=0.9, global_clipnorm=10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "13d95d7d-ea41-4516-b5b6-46f089926d81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['resnet18', 'resnet34', 'resnet50', 'resnet101', 'resnet152', 'resnet18_v2', 'resnet34_v2', 'resnet50_v2', 'resnet101_v2', 'resnet152_v2', 'mobilenet_v3_small', 'mobilenet_v3_large', 'csp_darknet_tiny', 'csp_darknet_s', 'csp_darknet_m', 'csp_darknet_l', 'csp_darknet_xl', 'efficientnetv1_b0', 'efficientnetv1_b1', 'efficientnetv1_b2', 'efficientnetv1_b3', 'efficientnetv1_b4', 'efficientnetv1_b5', 'efficientnetv1_b6', 'efficientnetv1_b7', 'efficientnetv2_s', 'efficientnetv2_m', 'efficientnetv2_l', 'efficientnetv2_b0', 'efficientnetv2_b1', 'efficientnetv2_b2', 'efficientnetv2_b3', 'densenet121', 'densenet169', 'densenet201', 'efficientnetlite_b0', 'efficientnetlite_b1', 'efficientnetlite_b2', 'efficientnetlite_b3', 'efficientnetlite_b4', 'yolo_v8_xs_backbone', 'yolo_v8_s_backbone', 'yolo_v8_m_backbone', 'yolo_v8_l_backbone', 'yolo_v8_xl_backbone', 'vitdet_base', 'vitdet_large', 'vitdet_huge', 'videoswin_tiny', 'videoswin_small', 'videoswin_base', 'resnet50_imagenet', 'resnet50_v2_imagenet', 'mobilenet_v3_large_imagenet', 'mobilenet_v3_small_imagenet', 'csp_darknet_tiny_imagenet', 'csp_darknet_l_imagenet', 'efficientnetv2_s_imagenet', 'efficientnetv2_b0_imagenet', 'efficientnetv2_b1_imagenet', 'efficientnetv2_b2_imagenet', 'densenet121_imagenet', 'densenet169_imagenet', 'densenet201_imagenet', 'yolo_v8_xs_backbone_coco', 'yolo_v8_s_backbone_coco', 'yolo_v8_m_backbone_coco', 'yolo_v8_l_backbone_coco', 'yolo_v8_xl_backbone_coco', 'vitdet_base_sa1b', 'vitdet_large_sa1b', 'vitdet_huge_sa1b', 'videoswin_tiny_kinetics400', 'videoswin_small_kinetics400', 'videoswin_base_kinetics400', 'videoswin_base_kinetics400_imagenet22k', 'videoswin_base_kinetics600_imagenet22k', 'videoswin_base_something_something_v2', 'yolo_v8_m_pascalvoc'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(models.YOLOV8Detector.presets.keys()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "737c62c0-f43e-4562-8c8c-f19b14071521",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/models/keras/yolov8/keras/yolo_v8_xs_backbone_coco/2/download/config.json...\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████| 645/645 [00:00<00:00, 667kB/s]\n",
+      "Downloading from https://www.kaggle.com/api/v1/models/keras/yolov8/keras/yolo_v8_xs_backbone_coco/2/download/model.weights.h5...\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 5.11M/5.11M [00:02<00:00, 1.79MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models.YOLOV8Detector.from_preset(\n",
+    "    \"yolo_v8_xs_backbone_coco\",\n",
+    "    bounding_box_format=\"xywh\",\n",
+    "    num_classes=NUM_CLASSES,  # Adjust this based on your dataset\n",
+    "    input_shape=IMAGE_SIZE + (3,),  # (640, 640, 3)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "24af8f27-e3e2-4d11-96ac-90410c22c276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    classification_loss=\"binary_crossentropy\",\n",
+    "    box_loss=\"ciou\",\n",
+    "    optimizer=optimizer,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f16c3ed9-6bc0-4d23-818d-c0313a8f7659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coco_metrics_callback = keras_cv.callbacks.PyCOCOCallback(\n",
+    "    val_dataset.take(20), bounding_box_format=\"xywh\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "75da7e2a-728e-4f8b-b79e-9013c6e297c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(TensorSpec(shape=<unknown>, dtype=tf.float32, name=None), TensorSpec(shape=<unknown>, dtype=tf.float32, name=None))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_dataset.element_spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "241bffaa-f1f9-478a-bb42-010f539db694",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "as_list() is not defined on an unknown TensorShape.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_dataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtake\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Run for 10-35~ epochs to achieve good scores.\u001b[39;49;00m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mcoco_metrics_callback\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mD:\\miniconda\\envs\\object_detection\\Lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mD:\\miniconda\\envs\\object_detection\\Lib\\site-packages\\keras_cv\\src\\models\\object_detection\\yolo_v8\\yolo_v8_detector.py:526\u001b[0m, in \u001b[0;36mYOLOV8Detector.train_step\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m    524\u001b[0m args \u001b[38;5;241m=\u001b[39m args[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m    525\u001b[0m x, y \u001b[38;5;241m=\u001b[39m unpack_input(data)\n\u001b[1;32m--> 526\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_step\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: as_list() is not defined on an unknown TensorShape."
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(\n",
+    "    train_dataset.take(20),\n",
+    "    # Run for 10-35~ epochs to achieve good scores.\n",
+    "    epochs=1,\n",
+    "    callbacks=[coco_metrics_callback],\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d42cef-c121-4f6c-9c6f-4019e5186768",
+   "id": "2798e457-8a6a-4b4e-89a7-83fc2f5df415",
    "metadata": {},
    "outputs": [],
    "source": []
