First Successful Train using Ultralytics

--- a/DL/prepare_ds.ipynb
+++ b/DL/prepare_ds.ipynb
@@ -231,7 +231,7 @@
     "        xmin = int(bbox['xmin'])\n",
     "        ymin = int(bbox['ymin'])\n",
     "        xmax = int(bbox['xmax'])\n",
-    "        ymax = int(bbox['xmax'])\n",
+    "        ymax = int(bbox['ymax'])\n",
     "        \n",
     "        # Calculate YOLO format\n",
     "        image_width = int(annotation['size']['width'])\n",
@@ -320,9 +320,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2ed17ec-fe15-459a-835f-c5ec0397158e",
+   "metadata": {},
+   "source": [
+    "## Another Attempt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eb3ee29c-9c17-4bce-89cb-ebd1ae0b1caa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matched image files:\n",
+      "dataset\\train\\images\\55c04d26-Nyathpola.jpg\n",
+      "Matched label files:\n",
+      "dataset\\train\\labels\\115e44a7-image_29.txt\n",
+      "dataset\\train\\labels\\14a405f1-image_10.txt\n",
+      "dataset\\train\\labels\\159954d7-image_199.txt\n",
+      "dataset\\train\\labels\\174afc0c-image_86.txt\n",
+      "dataset\\train\\labels\\1c2822e4-image_480.txt\n"
+     ]
+    },
+    {
+     "ename": "InvalidArgumentError",
+     "evalue": "Expected 'tf.Tensor(False, shape=(), dtype=bool)' to be true. Summarized data: b'No files matched pattern: dataset/val/images\\\\*.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 76\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;66;03m# Check the validation dataset paths and files\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 76\u001b[0m     val_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_loader\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdataset/val/images\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdataset/val/labels\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     78\u001b[0m     \u001b[38;5;28mprint\u001b[39m(e)\n",
+      "Cell \u001b[1;32mIn[11], line 38\u001b[0m, in \u001b[0;36mdata_loader\u001b[1;34m(images_dir, labels_dir, batch_size)\u001b[0m\n\u001b[0;32m     35\u001b[0m image_files_pattern \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(images_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     36\u001b[0m label_files_pattern \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(labels_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 38\u001b[0m image_files \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_files_pattern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m label_files \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataset\u001b[38;5;241m.\u001b[39mlist_files(label_files_pattern, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# Print the matched files for debugging\u001b[39;00m\n",
+      "File \u001b[1;32mD:\\miniconda\\envs\\object_detection\\Lib\\site-packages\\tensorflow\\python\\data\\ops\\dataset_ops.py:1320\u001b[0m, in \u001b[0;36mDatasetV2.list_files\u001b[1;34m(file_pattern, shuffle, seed, name)\u001b[0m\n\u001b[0;32m   1313\u001b[0m condition \u001b[38;5;241m=\u001b[39m math_ops\u001b[38;5;241m.\u001b[39mgreater(array_ops\u001b[38;5;241m.\u001b[39mshape(matching_files)[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m   1314\u001b[0m                              name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatch_not_empty\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1316\u001b[0m message \u001b[38;5;241m=\u001b[39m math_ops\u001b[38;5;241m.\u001b[39madd(\n\u001b[0;32m   1317\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo files matched pattern: \u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   1318\u001b[0m     string_ops\u001b[38;5;241m.\u001b[39mreduce_join(file_pattern, separator\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m), name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m-> 1320\u001b[0m assert_not_empty \u001b[38;5;241m=\u001b[39m \u001b[43mcontrol_flow_assert\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAssert\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1321\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcondition\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mmessage\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msummarize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43massert_not_empty\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1322\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ops\u001b[38;5;241m.\u001b[39mcontrol_dependencies([assert_not_empty]):\n\u001b[0;32m   1323\u001b[0m   matching_files \u001b[38;5;241m=\u001b[39m array_ops\u001b[38;5;241m.\u001b[39midentity(matching_files)\n",
+      "File \u001b[1;32mD:\\miniconda\\envs\\object_detection\\Lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mD:\\miniconda\\envs\\object_detection\\Lib\\site-packages\\tensorflow\\python\\ops\\control_flow_assert.py:102\u001b[0m, in \u001b[0;36mAssert\u001b[1;34m(condition, data, summarize, name)\u001b[0m\n\u001b[0;32m    100\u001b[0m     xs \u001b[38;5;241m=\u001b[39m ops\u001b[38;5;241m.\u001b[39mconvert_n_to_tensor(data)\n\u001b[0;32m    101\u001b[0m     data_str \u001b[38;5;241m=\u001b[39m [_summarize_eager(x, summarize) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m xs]\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mInvalidArgumentError(\n\u001b[0;32m    103\u001b[0m         node_def\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    104\u001b[0m         op\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    105\u001b[0m         message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m to be true. Summarized data: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m\n\u001b[0;32m    106\u001b[0m         (condition, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(data_str)))\n\u001b[0;32m    107\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ops\u001b[38;5;241m.\u001b[39mname_scope(name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAssert\u001b[39m\u001b[38;5;124m\"\u001b[39m, [condition, data]) \u001b[38;5;28;01mas\u001b[39;00m name:\n",
+      "\u001b[1;31mInvalidArgumentError\u001b[0m: Expected 'tf.Tensor(False, shape=(), dtype=bool)' to be true. Summarized data: b'No files matched pattern: dataset/val/images\\\\*.jpg'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import os\n",
+    "\n",
+    "def load_sample_with_shape(image_path, label_path):\n",
+    "    # Load the image\n",
+    "    image = tf.io.read_file(image_path)\n",
+    "    image = tf.image.decode_jpeg(image, channels=3)\n",
+    "    image = tf.image.resize(image, [256, 256])  # Resize or reshape as necessary\n",
+    "\n",
+    "    # Load the annotations\n",
+    "    label = tf.io.read_file(label_path)\n",
+    "    label = tf.strings.split(label, sep='\\n')\n",
+    "    label = tf.strings.to_number(label, tf.float32)\n",
+    "    label = tf.reshape(label, [-1, 4])  # Assuming each label has 4 values (e.g., bounding box coordinates)\n",
+    "\n",
+    "    return image, label\n",
+    "\n",
+    "def filter_empty_annotations(image, annotations):\n",
+    "    # Filter out samples where annotations are empty\n",
+    "    return tf.size(annotations) > 0\n",
+    "\n",
+    "def pad_annotations(image, annotations, max_num_annotations=100):\n",
+    "    num_annotations = tf.shape(annotations)[0]\n",
+    "    pad_size = max_num_annotations - num_annotations\n",
+    "\n",
+    "    # Ensure pad_size is non-negative\n",
+    "    pad_size = tf.maximum(pad_size, 0)\n",
+    "\n",
+    "    # Create padding tensor dynamically\n",
+    "    padding = tf.stack([[0, pad_size], [0, 0]], axis=0)\n",
+    "    padded_annotations = tf.pad(annotations, padding, constant_values=-1)\n",
+    "    return image, padded_annotations\n",
+    "\n",
+    "def data_loader(images_dir, labels_dir, batch_size):\n",
+    "    image_files_pattern = os.path.join(images_dir, \"*.jpg\")\n",
+    "    label_files_pattern = os.path.join(labels_dir, \"*.txt\")\n",
+    "\n",
+    "    image_files = tf.data.Dataset.list_files(image_files_pattern, shuffle=False)\n",
+    "    label_files = tf.data.Dataset.list_files(label_files_pattern, shuffle=False)\n",
+    "\n",
+    "    # Print the matched files for debugging\n",
+    "    tf.print(\"Matched image files:\")\n",
+    "    for file in image_files.take(5):\n",
+    "        tf.print(file)\n",
+    "    tf.print(\"Matched label files:\")\n",
+    "    for file in label_files.take(5):\n",
+    "        tf.print(file)\n",
+    "\n",
+    "    # Check if the datasets are empty\n",
+    "    if tf.data.experimental.cardinality(image_files) == 0:\n",
+    "        raise FileNotFoundError(f\"No image files found in {images_dir} with pattern {image_files_pattern}\")\n",
+    "    if tf.data.experimental.cardinality(label_files) == 0:\n",
+    "        raise FileNotFoundError(f\"No label files found in {labels_dir} with pattern {label_files_pattern}\")\n",
+    "\n",
+    "    dataset = tf.data.Dataset.zip((image_files, label_files))\n",
+    "\n",
+    "    dataset = dataset.map(load_sample_with_shape, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "\n",
+    "    dataset = dataset.filter(lambda image, annotations: tf.py_function(\n",
+    "        func=filter_empty_annotations,\n",
+    "        inp=[image, annotations],\n",
+    "        Tout=tf.bool)\n",
+    "    )\n",
+    "\n",
+    "    dataset = dataset.map(lambda image, annotations: pad_annotations(image, annotations), num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "\n",
+    "    dataset = dataset.batch(batch_size, drop_remainder=False).prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "    return dataset\n",
+    "\n",
+    "# Usage\n",
+    "train_dataset = data_loader(\"dataset/train/images\", \"dataset/train/labels\", batch_size=3)\n",
+    "\n",
+    "# Check the validation dataset paths and files\n",
+    "try:\n",
+    "    val_dataset = data_loader(\"dataset/val/images\", \"dataset/val/labels\", batch_size=3)\n",
+    "except FileNotFoundError as e:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "004adb74-ae5a-45ee-89e2-631e0bd93ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Projects\\\\DL\\\\MonumentDetection\\\\DL'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8818d8-9d69-4b36-b774-684cd688b0f5",
+   "id": "c77cb5f8-15e3-4200-8d0f-da133228a876",
    "metadata": {},
    "outputs": [],
    "source": []
