--- a/DL/ultralytics/ultralytics.ipynb
+++ b/DL/ultralytics/ultralytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b4654cae-4cc6-4229-9513-43038031ee31",
    "metadata": {},
    "outputs": [],
@@ -13,30 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cb920ed1-85e5-4208-87b4-8e19b0850953",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "trained_dir = Path(\"D:/Projects/DL/MonumentDetection/DL/runs/detect/train2/weights/best.pt\")"
+    "trained_dir = Path(\"D:/Projects\\DL\\MonumentDetection\\DL\\ultralytics\\runs\\detect\\train2\\weights\\best.pt\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9317be6f-8497-4df4-b42b-6b2b5ba69912",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transferred 319/355 items from pretrained weights\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = YOLO(\"yolov8n.yaml\").load(trained_dir)"
+    "model = YOLO(\"yolov8n.yaml\")"
    ]
   },
   {
@@ -369,70 +363,7 @@
     }
    ],
    "source": [
-    "results = model.train(data=\"config.yaml\", epochs = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5eaf9c39-0ac6-4011-afa0-5dc60c7508f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ultralytics YOLOv8.2.18  Python-3.9.19 torch-2.3.0+cpu CPU (11th Gen Intel Core(TM) i5-1135G7 2.40GHz)\n",
-      "YOLOv8n summary (fused): 168 layers, 3151904 parameters, 0 gradients, 8.7 GFLOPs\n",
-      "\n",
-      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'yolov8n.yaml' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 84, 8400) (0.0 MB)\n",
-      "\n",
-      "\u001b[34m\u001b[1mTensorFlow SavedModel:\u001b[0m starting export with tensorflow 2.13.1...\n",
-      "Downloading https://github.com/ultralytics/assets/releases/download/v8.2.0/calibration_image_sample_data_20x128x128x3_float32.npy.zip to 'calibration_image_sample_data_20x128x128x3_float32.npy.zip'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 1.11M/1.11M [00:00<00:00, 6.15MB/s]\n",
-      "Unzipping calibration_image_sample_data_20x128x128x3_float32.npy.zip to D:\\Projects\\DL\\MonumentDetection\\DL\\calibration_image_sample\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.16.0 opset 17...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m simplifying with onnxsim 0.4.36...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m export success  3.9s, saved as 'yolov8n.onnx' (12.3 MB)\n",
-      "\u001b[34m\u001b[1mTensorFlow SavedModel:\u001b[0m starting TFLite export with onnx2tf 1.17.5...\n",
-      "\u001b[34m\u001b[1mTensorFlow SavedModel:\u001b[0m export success  88.5s, saved as 'yolov8n_saved_model' (30.9 MB)\n",
-      "\n",
-      "\u001b[34m\u001b[1mTensorFlow Lite:\u001b[0m starting export with tensorflow 2.13.1...\n",
-      "\u001b[34m\u001b[1mTensorFlow Lite:\u001b[0m export success  0.0s, saved as 'yolov8n_saved_model\\yolov8n_float32.tflite' (12.3 MB)\n",
-      "\n",
-      "Export complete (93.4s)\n",
-      "Results saved to \u001b[1mD:\\Projects\\DL\\MonumentDetection\\DL\u001b[0m\n",
-      "Predict:         yolo predict task=detect model=yolov8n_saved_model\\yolov8n_float32.tflite imgsz=640  \n",
-      "Validate:        yolo val task=detect model=yolov8n_saved_model\\yolov8n_float32.tflite imgsz=640 data=None  \n",
-      "Visualize:       https://netron.app\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'yolov8n_saved_model\\\\yolov8n_float32.tflite'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.export(format=\"tflite\")"
+    "results = model.train(data=\"config.yaml\", epochs = 100)"
    ]
   }
  ],
