Applied first set of augmentations and automated cleaning

--- a/DL/ultralytics/Augmentation.ipynb
+++ b/DL/ultralytics/Augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "c3ad0a36-faca-404d-ad27-35e4a65893f7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "85952ef9-ad21-4653-8913-8e0a37d14181",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "'D:\\\\Projects\\\\DL\\\\MonumentDetection'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
+   "id": "b64b2ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_size = (640, 640)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "1c0ad979-8a82-4d02-8ce2-e9a0deb98dad",
    "metadata": {},
    "outputs": [],
@@ -66,25 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "817ded08-2bfb-4ca7-9d22-4c456933f1ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_dir = Path(\"D:/Projects/DL/MonumentDetection/DL/ultralytics/datasetUnstructured/images\")"
+    "image_dir = Path(\"D:/Projects/DL/MonumentDetection/Dataset\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "a8765659-f089-403f-8a41-59c27524d64e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_augmented_images(datagen, image_path, output_dir, num_augmentations=15):\n",
+    "def save_augmented_images(datagen, image_path, image_size, output_dir, num_augmentations=15):\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    \n",
-    "    img = tf.keras.preprocessing.image.load_img(image_path)\n",
+    "    img = tf.keras.preprocessing.image.load_img(image_path, target_size= image_size)\n",
     "    x = tf.keras.preprocessing.image.img_to_array(img)\n",
     "    x = np.expand_dims(x, axis=0)\n",
     "    \n",
@@ -97,26 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "747768d0-ef06-4f7c-a9c6-4a61d630fdd1",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_paths = [os.path.join(image_dir,f) for f in os.listdir(image_dir) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
-    "output_dir = \"augmented_images\"\n",
+    "output_dir = \"augmentedImages\"\n",
     "num_augmentations_per_image = 15\n",
     "# print(image_paths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "44b9358a",
    "metadata": {},
    "outputs": [],
    "source": [
     "for image_path in image_paths:\n",
-    "    save_augmented_images(datagen, image_path, output_dir, num_augmentations_per_image)"
+    "    save_augmented_images(datagen, image_path, image_size, output_dir, num_augmentations_per_image)"
    ]
   },
   {
@@ -126,7 +136,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def display_image(image_path):\n",
     "    img = tf.keras.preprocessing.image.load_img(image_path)\n",
     "    plt.imshow(img)\n",
