--- a/DL/ultralytics/ultralytics.ipynb
+++ b/DL/ultralytics/ultralytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b4654cae-4cc6-4229-9513-43038031ee31",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "658ef8f7",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,7 @@
     "    try:\n",
     "        import albumentations as A         \n",
     "        T = [\n",
+    "            A.Resize(640, 640),  # Resize images to 640x640\n",
     "            A.RandomRain(\n",
     "                p=0.1, \n",
     "                slant_lower=-10, \n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b476ff3a",
    "metadata": {},
    "outputs": [],
